--- a/vignettes/III-formatting.Rmd
+++ b/vignettes/III-formatting.Rmd
@@ -43,7 +43,12 @@ source(file = "inst/scripts/annotate_masses.R")
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(names = starts_with("annotations_ms1"), targets_only = TRUE, degree_from = 8)
+targets::tar_visnetwork(
+  names = starts_with("annotations_ms1"),
+  exclude = c(contains("par_")),
+  targets_only = TRUE,
+  degree_from = 8
+)
 ```
 
 ### Spectral
@@ -66,7 +71,12 @@ source(file = "inst/scripts/prepare_annotations_spectra.R")
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(names = starts_with("annotations_spectral_is"), targets_only = TRUE, degree_from = 8)
+targets::tar_visnetwork(
+  names = starts_with("annotations_spectral_is"),
+  exclude = c(contains("par_")),
+  targets_only = TRUE,
+  degree_from = 8
+)
 ```
 
 #### GNPS
@@ -84,7 +94,12 @@ source(file = "inst/scripts/prepare_annotations_gnps.R")
 You now have all your spectral annotations:
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(names = starts_with("annotations_spectral"), targets_only = TRUE, degree_from = 8)
+targets::tar_visnetwork(
+  names = starts_with("annotations_spectral"),
+  exclude = c(contains("par_")),
+  targets_only = TRUE,
+  degree_from = 8
+)
 ```
 
 ### Fingerprint-based
@@ -119,7 +134,12 @@ source(file = "inst/scripts/prepare_annotations_sirius.R")
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(names = starts_with("annotations_s"), targets_only = TRUE, degree_from = 8)
+targets::tar_visnetwork(
+  names = starts_with("annotations_s"),
+  exclude = c(contains("par_")),
+  targets_only = TRUE,
+  degree_from = 8
+)
 ```
 
 You now have your annotations well prepared and can keep on formatting the rest of your metadata.
@@ -179,7 +199,12 @@ source(file = "inst/scripts/prepare_taxa.R")
 You are almost there! See already all the steps accomplished!
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(names = starts_with("features"), targets_only = TRUE, degree_from = 8)
+targets::tar_visnetwork(
+  names = starts_with("features"),
+  exclude = c(contains("par_")),
+  targets_only = TRUE,
+  degree_from = 8
+)
 ```
 
 We now recommend you to read the [next vignette](https://taxonomicallyinformedannotation.github.io/tima-r/articles/IV-processing.html).
