--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -114,16 +114,7 @@ targets::tar_visnetwork(
 
 ### Your own file(s)
 
-Basically, the most important file you need to provide is an MGF file containing the spectra you want to annotate, as you can see in the architecture:
-
-```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(
-  names = starts_with("input"),
-  exclude = c(contains("par")),
-  targets_only = TRUE,
-  degree_from = 8
-)
-```
+The most important file you need to provide is an MGF file containing the spectra you want to annotate.
 
 If you already ran a GNPS job, you can simply do:
 
@@ -153,7 +144,11 @@ we provide it here as a starting point for your structure-organism pairs library
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
   names = starts_with("input"),
-  exclude = c(contains("par")),
+  exclude = c(
+    contains("par_"),
+    contains("params"),
+    contains("paths")
+  ),
   targets_only = TRUE,
   degree_from = 8
 )
@@ -238,7 +233,11 @@ You now should have a nice custom structure-organism pairs library for the next 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
   names = starts_with("library_sop"),
-  exclude = c(contains("par_")),
+  exclude = c(
+    contains("par_"),
+    contains("params"),
+    contains("paths")
+  ),
   targets_only = TRUE,
   degree_from = 8
 )
@@ -252,7 +251,11 @@ As a main limitation of current annotation tools is adducts detection and covera
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
   names = starts_with("library_adducts"),
-  exclude = c(contains("par_")),
+  exclude = c(
+    contains("par_"),
+    contains("params"),
+    contains("paths")
+  ),
   targets_only = TRUE,
   degree_from = 8
 )
@@ -314,7 +317,11 @@ source(file = "inst/scripts/prepare_libraries_spectra_is_lotus.R")
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
   names = starts_with("library_spectra"),
-  exclude = c(contains("par_")),
+  exclude = c(
+    contains("par_"),
+    contains("params"),
+    contains("paths")
+  ),
   targets_only = TRUE,
   degree_from = 8
 )
@@ -335,7 +342,11 @@ You are finally ready for the next step, with all dictionaries, inputs, and libr
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
   names = starts_with("library"),
-  exclude = c(contains("par_")),
+  exclude = c(
+    contains("par_"),
+    contains("params"),
+    contains("paths")
+  ),
   targets_only = TRUE,
   degree_from = 8
 )
