--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -119,6 +119,10 @@ source(file = "inst/scripts/get_gnps_tables.R")
 
 To get an example of an MGF file (corresponding to the spectra to annotate, not to to the library to query), just run:
 
+```{r setup, include = FALSE}
+unlink("data/source/example_spectra.mgf")
+```
+
 ```{r}
 source(file = "inst/scripts/get_example_spectra.R")
 ```
