--- a/vignettes/III-formatting.Rmd
+++ b/vignettes/III-formatting.Rmd
@@ -44,7 +44,7 @@ source(file = "inst/scripts/annotate_masses.R")
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
-  names = starts_with("annotations_ms1"),
+  names = starts_with("ann_ms1"),
   exclude = c(
     contains("par_"),
     contains("paths")
@@ -75,7 +75,7 @@ source(file = "inst/scripts/prepare_annotations_spectra.R")
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
-  names = starts_with("annotations_spectral_is"),
+  names = starts_with("ann_spe_is"),
   exclude = c(
     contains("par_"),
     contains("paths")
@@ -101,7 +101,7 @@ You now have all your spectral annotations:
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
-  names = starts_with("annotations_spectral"),
+  names = starts_with("ann_spe"),
   exclude = c(
     contains("par_"),
     contains("paths")
@@ -144,7 +144,7 @@ source(file = "inst/scripts/prepare_annotations_sirius.R")
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
-  names = starts_with("annotations_s"),
+  names = starts_with("ann_s"),
   exclude = c(
     contains("par_"),
     contains("paths")
@@ -219,7 +219,7 @@ You are almost there! See already all the steps accomplished!
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
-  names = starts_with("features"),
+  names = starts_with("fea"),
   exclude = c(
     contains("par_"),
     contains("paths")
