--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -29,7 +29,7 @@ source(file = "inst/scripts/change_tests.R")
 ## Parameters
 
 As mentioned previously, almost all steps require parameters.
-Some pre-defined parameters are given in `params/default` directory.
+Some pre-defined parameters are given in `tools/default` directory.
 Those will help you understanding how the workflow works so you can adapt them later to your own data.
 
 So first, let's have a look at the structure of the parameters:
@@ -73,7 +73,7 @@ targets::tar_visnetwork(
 ```
 
 See how your targets changed?
-The values you adapted in `params/prepare_params.yaml` were automatically propagated to all sub-files in `params/user`.
+The values you adapted in `tools/prepare_params.yaml` were automatically propagated to all sub-files in `tools/user`.
 
 And everything is stored in case you re-perform it, the beauty of `{targets}`!
 
@@ -237,7 +237,7 @@ You just need to format it in order to be compatible.
 As example, we prepared some ways too format closed, *in house* libraries.
 If you need help formatting your library or would like to share it with us for it to be implemented, feel free to contact us.
 
-Before running the corresponding code, do not forget to modify `params/user/prepare_libraries_sop_closed.yaml`
+Before running the corresponding code, do not forget to modify `tools/user/prepare_libraries_sop_closed.yaml`
 
 ```{r, results="hide", message=FALSE, warning=FALSE}
 source(file = "inst/scripts/prepare_libraries_sop_closed.R")
@@ -247,7 +247,7 @@ source(file = "inst/scripts/prepare_libraries_sop_closed.R")
 
 Once you have all your sub-libraries prepared, you are ready to merge them in a single file that will be used for the next steps.
 
-Before running the corresponding code, do not forget to modify `params/user/prepare_libraries_sop_merged.yaml`.
+Before running the corresponding code, do not forget to modify `tools/user/prepare_libraries_sop_merged.yaml`.
 
 At this step, if you want to, you can restrict your library to specific taxa only.
 We do not advise doing so, but we offer you the possibility to do it.
@@ -289,7 +289,7 @@ targets::tar_visnetwork(
 
 As you can see, it depends on the previously built library.
 
-Before running the corresponding code, do not forget to modify `params/user/prepare_libraries_adducts.yaml`.
+Before running the corresponding code, do not forget to modify `tools/user/prepare_libraries_adducts.yaml`.
 
 ```{r, results="hide", message=FALSE, warning=FALSE}
 source(file = "inst/scripts/prepare_libraries_adducts.R")
