--- a/vignettes/I-intro.Rmd
+++ b/vignettes/I-intro.Rmd
@@ -51,6 +51,7 @@ Sys.setenv(TAR_WARN = "false")
 targets::tar_visnetwork(
   names = starts_with("ann"),
   exclude = c(
+    contains("benchmark"),
     contains("dic"),
     contains("par_"),
     contains("gnps"),
