--- a/vignettes/III-formatting.Rmd
+++ b/vignettes/III-formatting.Rmd
@@ -223,11 +223,24 @@ Before running the corresponding code, do not forget to modify `inst/params/user
 source(file = "inst/scripts/prepare_taxa.R")
 ```
 
+## Filter annotations (based on retention time)
+
+This step allows you to filter out the annotation of all the tools used,
+based on your own internal (experimental or predicted) retention times library.
+It is optional. 
+If you do not have one, it will simply group the annotations of all tools. 
+
+Before running the corresponding code, do not forget to modify `inst/params/user/filter_annotations.yaml`.
+
+```{r prepare-taxa, results="hide", message=FALSE, warning=FALSE}
+source(file = "inst/scripts/filter_annotations.R")
+```
+
 You are almost there! See already all the steps accomplished!
 
 ```{r features-all, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
-  names = starts_with("fea"),
+  names = matches("^ann"),
   exclude = c(
     contains("benchmark"),
     contains("par_"),
